# etl-cookbook-tutorial

./: .gitignore  CLAUDE.md  LICENSE  README.md  check-all.sh  check_all.sh  clean-all.sh  clean_all.sh  push_upstream.sh
.github/pages/: index.html
.github/workflows/: ci.yml  docs.yml
DuckDB/: README.md  pyproject.toml
DuckDB/examples/: 01_connecting_and_querying.py  02_reading_partitioned_parquet.py  03_joins_and_aggregations.py  04_memory_limit_and_spill.py  05_pandas_arrow_interop.py  06_copy_to_partitioned.py  07_persistent_staging_upsert.py  08_ingestion_and_quality.py  09_advanced_sql_transforms.py  10_macros_and_python_udfs.py  11_export_import_and_views_vs_tables.py  14_data_types.py  15_sequential_stateful_loop.py  17_multitable_join_spill.py  20_window_functions_advanced.py  21_transactions_and_mvcc.py  _common.py
DuckDB/tests/: test_duckdb_queries.py  test_etl_features.py  test_join_performance.py  test_parameterized_queries.py  test_profiling.py  test_surrogate_keys.py
data/: generate_data.py
exemplos-DuckDB/: README.md  pyproject.toml
exemplos-DuckDB/examples/: 01_connecting_and_querying.py  02_reading_partitioned_parquet.py  03_joins_and_aggregations.py  04_memory_limit_and_spill.py  05_pandas_arrow_interop.py  06_copy_to_partitioned.py  08_ingestion_and_quality.py  09_advanced_sql_transforms.py  10_macros_and_python_udfs.py  11_export_import_and_views_vs_tables.py  12_performance_without_indexes.py  13_reading_public_s3.py  15_sequential_stateful_loop.py  16_join_performance.py  18_explain_analyze_profiling.py  19_json_ingestion_and_extraction.py  22_parameterized_queries.py  23_surrogate_keys_returning.py  _common.py
exemplos-DuckDB/tests/: conftest.py  test_ddl_features.py  test_examples_run.py  test_json_extraction.py  test_multitable_join_spill.py  test_sequential_loop.py  test_transactions_mvcc.py  test_window_functions.py
exemplos-pandas/: README.md
exemplos-pandas/examples/: 01_loading_and_dtypes.py  02_selection_and_filtering.py  05_merge_join.py  06_pivot_table.py  08_window_and_time.py  09_arrow_data_types.py  10_sequential_stateful_loop.py  _common.py
exemplos-pandas/tests/: test_common.py
exemplos-pyarrow/: README.md  pyproject.toml
exemplos-pyarrow/examples/: 01_reading_partitioned_datasets.py  03_data_cleaning.py  06_building_tables_from_functions.py  07_sorting_and_pivot_like.py  08_pandas_interop.py  09_hybrid_pandas_etl.py  10_data_types.py  11_sequential_stateful_loop.py  _common.py
exemplos-rust-extension/: README.md  pyproject.toml  run_data_types.py  run_etl.py  run_nested_params.py
exemplos-rust-extension/python/etl_rust_ext/: __init__.py
exemplos-rust-extension/tests/: test_rust_extension.py
exemplos-sqlalchemy-contract/: README.md
exemplos-sqlalchemy-contract/examples/: 02_orm_vs_columnar.py  03_account_hierarchy.py  04_orm_vs_batch.py  models.py
exemplos-sqlalchemy-contract/tests/: test_contract.py  (+2 more)
pandas/: README.md  pyproject.toml
pyarrow/: README.md  pyproject.toml
rust-extension/: Cargo.toml  README.md  docs_demo.py  pyproject.toml  run_contracts_parallel.py  run_etl.py  run_nested_params.py  run_reorg_for_upstream.py
rust-extension/docs_includes/: glossario.md
rust-extension/pdoc-templates/: index.html.jinja2
rust-extension/python/etl_rust_ext/: __init__.py
rust-extension/src/: lib.rs
rust-extension/tests/: test_data_types.py  test_nested_params.py  test_parallel_projection.py  test_reorg_for_upstream.py  test_run_etl.py  test_rust_extension.py
sqlalchemy-contract/: README.md  pyproject.toml
sqlalchemy-contract/examples/: 01_models_as_contract.py  02_orm_vs_columnar.py  03_account_hierarchy.py  04_orm_vs_batch.py  _common.py  models.py
sqlalchemy-contract/tests/: test_pipeline.py
(+24 files in other folders)
