[project]
name = "duckdb-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "pandas>=3.0.3",
    "pyarrow>=17",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: testes que exigem acesso à internet (pule com --no-network)",
]
