[package]
name = "etl-rust-ext"
version = "0.1.0"
edition = "2021"

[lib]
name = "_etl_rust_ext"
crate-type = ["cdylib"]

[dependencies]
# as features opcionais habilitam conversões automáticas na fronteira:
# - "rust_decimal": decimal.Decimal (Python) <-> rust_decimal::Decimal (Rust)
# - "chrono":       datetime.date/datetime  <-> chrono::NaiveDate/NaiveDateTime
pyo3 = { version = "0.29", features = ["extension-module", "rust_decimal", "chrono"] }
pyo3-arrow = "0.19"
arrow-array = "59"
arrow-schema = "59"
rust_decimal = "1"
chrono = "0.4"
