[project]
name = "sqlalchemy-contract-examples"
version = "0.1.0"
description = "Modelos SQLAlchemy como contrato de schema: DDL, Arrow e a migração do ORM para o caminho colunar"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "duckdb>=1.5.4",
    "pyarrow>=17",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
